# factory

./: .clang-format  .gitignore  CMakeLists.txt
HelperFunctions/: StaticFunctions.cpp  StaticFunctions.h
src/: Builder.cpp  Builder.h  Conveyorlogic.cpp  Conveyorlogic.h  Game.cpp  Game.h  GameData.h  MapLoader.cpp  MapLoader.h  Placement.cpp  Placement.h  State.h  main.cpp
src/Objects/: Block.cpp  Block.h  Chunk.cpp  Chunk.h
tinyxml/: tinyxml2.cpp  tinyxml2.h
